--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
-body {
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.image-gallery {
+ 
+  border: 2px solid transparent;
+  transition: border 0.3s ease-in-out;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+  grid-gap: 10px;
+  padding: 10px;
+  max-width: 1100px;
+  margin: 0 auto;
+  background: #f2f2f2;
+  grid-auto-flow: dense;
+  
+  
+ 
 }
+
+.action-bar{
+  border: 1px solid black;
+}
+
+.input{
+  border: 1px solid #ccc;
+  padding: 10px;
+  transition: transform 0.2s ease-in-out;
+  margin: 5px;
+  height: auto;
+  border-radius: 10px;
+ 
+}
+
+.image-gallery .input img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+}
+img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  animation-duration: 2s;
+}
+
+
+
+
+  
+  
+  .large {
+    grid-column: span 2;
+    grid-row: span 2;
+    object-fit: cover;
+    transition: border 0.3s ease-in-out;
+  }
+  
+  button {
+    
+    color: #ff0000;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #e5d4d4;
+  }
+
+  .heading{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin:10px;
+    color:red;
+  }
+
+  @media (max-width: 1080px) {
+    .image-gallery {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+  }
+  
+  
+  @media (max-width: 768px) {
+    .image-gallery {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+     grid-gap: 0cap;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .image-gallery {
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
+
+
+
+
+
+
+
+  
+  
+
+  
+
